gitops/label-studio/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: label-studio
  labels:
    app: label-studio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: label-studio
  template:
    metadata:
      labels:
        app: label-studio
    spec:
      containers:
        - name: label-studio
          image: "docker.io/heartexlabs/label-studio"
          ports:
            - name: label-studio
              containerPort: 9000
          volumeMounts:
            - name: label-studio-data
              mountPath: /label-studio/data
      volumes:
        - name: label-studio-data
          persistentVolumeClaim:
            claimName: label-studio-data-pvc
